@@ -18,8 +18,10 @@
 package opennlp.tools.similarity.apps;
 
 import java.io.BufferedReader;
+import java.io.IOException;
 import java.io.InputStreamReader;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URLConnection;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -37,35 +39,23 @@ public class WebSearchEngineResultsScraper {
 
   protected static String fetchPageSearchEngine(String url) {
     System.out.println("fetch url " + url);
-    String pageContent = null;
     StringBuilder buf = new StringBuilder();
     try {
-      URLConnection connection = new URL(url).openConnection();
+      URLConnection connection = new URI(url).toURL().openConnection();
       connection.setReadTimeout(50000);
-      connection
-          .setRequestProperty(
-              "User-Agent",
+      connection.setRequestProperty("User-Agent",
               "Mozilla/5.0 (Windows; U; Windows NT 6.0; en-GB; rv:1.9.0.3) Gecko/2008092417 Firefox/3.0.3");
       String line;
-      BufferedReader reader = null;
-      try {
-        reader = new BufferedReader(new InputStreamReader(
-            connection.getInputStream()));
-      } catch (Exception e) {
-        System.err.println("Unable to complete search engine request "+url);
-        //e.printStackTrace();
+      try (BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
+        while ((line = reader.readLine()) != null) {
+          buf.append(line);
+        }
+        return buf.toString();
       }
-
-      while ((line = reader.readLine()) != null) {
-        buf.append(line);
-      }
-
-    } catch (Exception e) {
-      // e.printStackTrace();
+    } catch (IOException | URISyntaxException e) {
       System.err.println("error fetching url " + url);
+      return null;
     }
-
-    return buf.toString();
   }
 
   private static List<String> extractURLsFromPage(String content, String domain) {
@@ -127,13 +117,11 @@ public class WebSearchEngineResultsScraper {
   }
   
   private static String formRequestURL(String query) {
-    String requestUrl = "http://www.hakia.com/search/web?q=" + query.replace(' ','+');
-    return requestUrl;
+    return "http://www.hakia.com/search/web?q=" + query.replace(' ','+');
   }
   
   private static String formRequestURLAlt(String query) {
-    String requestUrl = "https://www.google.com/search?q=" + query.replace(' ','+');
-    return requestUrl;
+    return "https://www.google.com/search?q=" + query.replace(' ','+');
   }
 
   public List<String> getURLsForWebDomain(String domain) {
@@ -184,7 +172,6 @@ public class WebSearchEngineResultsScraper {
   }
   
   final Map<String, String[][]> cachedSearchEngineData = new HashMap<>();
-  
   
   private void buildCache(){
     cachedSearchEngineData.put("remember+to+buy+milk+tomorrow+for+details", new String[][]{
